terraform/subnets.tf
# Subnet for Brutal Grounds Dedicated Server
resource "aws_subnet" "bg_sn" {
  vpc_id = aws_vpc.bg_vpc.id

  cidr_block = "10.0.0.0/24"

  map_public_ip_on_launch = "true"

  tags = {
    Name = "Brutal Grounds Subnet"
    Purpose = "brutal_grounds"
  }
}
